# Cooking-An-LLM

./: README.md  attention.ipynb  doing.ipynb  dumb_llm.py  main.py  pyproject.toml
