[project]
name = "cooking-an-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.13.0",
    "torchaudio>=2.11.0.dev20260718",
    "torchvision>=0.29.0.dev20260718",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/nightly/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[tool.uv]
environments = [
    "sys_platform == 'win32'"
]
